2009-10-09  Andreas K. Foerster  <info@akfoerster.de>

	* replaced bdfread.c with bdf2c (awk)

	* avtaddons.h, colorchooser.c (avta_color_selection):
	new function
	avatarsay.c (ask_background_color, ask_balloon_color):
	adapted

	* avatarsay.c: reset colors to given settings

2009-10-08  Andreas K. Foerster  <info@akfoerster.de>

	* replaced bin2c.c with my own data2c (awk)

2009-10-04  Andreas K. Foerster  <info@akfoerster.de>

	* pascal/xpm2pas: new tool (awk)

	* pascal/akfavatar.pas (AvatarImageXPM, ShowImageXPM):
	new procedures

2009-10-03  Andreas K. Foerster  <info@akfoerster.de>

	* pascal/xbm2pas: new tool (awk)

	* pascal/akfavatar.pas (AvatarImageXBM, ShowImageXBM):
	new procedures

2009-10-01  Andreas K. Foerster  <info@akfoerster.de>

	* avtposix.c, mingw/avtwindows.c (open_config_file):
	new functions
	avatarsay.c (save_settings, successfully_saved, saving_failed):
	new functions
	(settings_submenu): adapted
	(read_config_file, check_local_config): new functions
	(check_config_file): adapted
	(ask_background_color, ask_balloon_color): adapted

	* avatarsay.c (ask_avatar_image): use correct separator

	* akfavatar.h, avatar.c (get_mode): new function

	* avatarsay.c (save_settings, read_config_file):
	read/restore window mode in config file

2009-09-28  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_pager_mb): add close button

	* avatar.c (avt_button_inlay): new function
	AVT_XBM_INFO: new macro
	(avt_pager_mb, avt_decide, avt_wait_button): adapted

2009-09-25  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_navigate): add eject and circle buttons

2009-09-23  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_navigate): save/restore buttons background

	* avatar.c (avt_initialize): make window not resizable
	remove most code for resizing the window
	(avt_change_mode): new function, was avt_resize

	* avatarsay.c (checkoptions): fix --fullfullscreen

2009-09-23  Andreas K. Foerster  <info@akfoerster.de>
